--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
   "env": {
     "config file url": {
     "description": "I will provide",
-     "required": true
+     "required": false
                        }
       },
   "addons": []
