--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-# REQUIRED CONFIG
-BOT_TOKEN = "1974093575:AAHojHtsZBPHcGtxcsiSfpvu_qwP3AT35pI"
-GDRIVE_FOLDER_ID = "0AJXtxQpHaP-TUk9PVA"
+# REQUIRED CONFIG : 1922939236:AAEBz-fAFyefnvkgDunvjKyXDv8wTDbiTOI
+BOT_TOKEN = "2135672944:AAFsuwyYT8i9uLGAcvJqv7vlgI6nxry6Gp4" #c2ptech:1922939236:AAEBz-fAFyefnvkgDunvjKyXDv8wTDbiTOI ,c2ptech5:1976201011:AAHAM1AgLsYUf6n4yc8PEFI9xcpka5Urw5E c2ptech5:1960740134:AAHclBxMLl9_lvVJSEbWBFlwVnlMjLE6woQ 
+GDRIVE_FOLDER_ID = "0AIGGqSmOUMZKUk9PVA" #my upload :1KkSOpu5PkgzTlZL3KIeMlLIn272KXoFi group drive:0AJXtxQpHaP-TUk9PVA
 OWNER_ID = 1273430546
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
@@ -8,48 +8,49 @@ AUTO_DELETE_MESSAGE_DURATION = 20
 IS_TEAM_DRIVE = "True"
 TELEGRAM_API = 3030128
 TELEGRAM_HASH = "cfc3885f5d2cbdbc5f10e6a643de2711"
-UPSTREAM_REPO = "https://github.com/Aashath0317/Torrent_2_Gdrive_mirrorbot"
+UPSTREAM_REPO = "https://github.com/Slam-Team/slam-mirrorbot"
 UPSTREAM_BRANCH = "master"
 # OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = "-1001593380081"  # Split by space
+AUTHORIZED_CHATS = ""  # Split by space
 SUDO_USERS = ""  # Split by space
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "True"
-INDEX_URL = "https://mydrive.akeelaasath.workers.dev/0:"
-STATUS_LIMIT = "6"  # Recommend limit status to 4 tasks max
+INDEX_URL = "https://videohive.c2ptech.workers.dev/0:" #http://mydrive.akeelaasath.workers.dev
+STATUS_LIMIT = ""  # Recommend limit status to 4 tasks max
 UPTOBOX_TOKEN = ""
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
+MEGA_API_KEY = "04ZRSCaD"
+MEGA_EMAIL_ID = "Akeelaashath@gmail.com"
+MEGA_PASSWORD = "20000317"
 BLOCK_MEGA_FOLDER = "" 
 BLOCK_MEGA_LINKS = ""
 STOP_DUPLICATE = "True"
-SHORTENER = ""
-SHORTENER_API = ""
+SHORTENER = "" #shrinkme.io
+SHORTENER_API = "" #8d07a0cad4930555e616a2d3f06ce19b7639d2d4
 # qBittorrent
 IS_VPS = ""
 SERVER_PORT = "80"  # Only for VPS
-BASE_URL_OF_BOT = ""  # Required for Heroku
+BASE_URL_OF_BOT = "https://videohive2101516757:AAEkIWkgI8ZsZG1XfxocX25sndUz9AwfJbQ.herokuapp.com"  # Required for Heroku
 # If you want to use Credentials externally from Index Links, fill these vars with the direct links
 # These are optional, if you don't know, simply leave them, don't fill anything in them.
 ACCOUNTS_ZIP_URL = ""
-TOKEN_PICKLE_URL = ""
+TOKEN_PICKLE_URL = "https://black.akeelaasath.workers.dev/token.pickle"
+MULTI_SEARCH_URL = ""
 # To use limit leave space between number and unit. Available units is (gb or GB, tb or TB)
-TORRENT_DIRECT_LIMIT = "250"
+TORRENT_DIRECT_LIMIT = ""
 TAR_UNZIP_LIMIT = ""
 CLONE_LIMIT = ""  
-MEGA_LIMIT = ""
+MEGA_LIMIT = "400" #35 GB
 # Fill only if you deploying with heroku-cli and Goorm IDE
 HEROKU_API_KEY = ""
 HEROKU_APP_NAME = ""
 # View Link button to open file Index Link in browser instead of direct download link
 # You can figure out if it's compatible with your Index code or not, open any video from you Index and check if the END of link from browser link bar is ?a=view, if yes make it "True" it will work (Compatible with Bhadoo Index Code)
-VIEW_LINK = "True"
+VIEW_LINK = "False"
 # Add more buttons (Three buttons are already added of Drive Link, Index Link, and View Link, you can add extra buttons too, these are optional)
 # If you don't know what are below entries, simply leave them, Don't fill anything in them.
-BUTTON_FOUR_NAME = "Subscribe 🔔"
-BUTTON_FOUR_URL = "https://www.youtube.com/channel/UCJVrPRNqzGPQfG57H-vgz0w" #https://www.youtube.com/channel/UCJVrPRNqzGPQfG57H-vgz0w"
+BUTTON_FOUR_NAME = "" #Youtube
+BUTTON_FOUR_URL = "" #https://www.youtube.com/channel/UCJVrPRNqzGPQfG57H-vgz0w
 BUTTON_FIVE_NAME = ""
 BUTTON_FIVE_URL = ""
 BUTTON_SIX_NAME = ""
