--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG : 1922939236:AAEBz-fAFyefnvkgDunvjKyXDv8wTDbiTOI
-BOT_TOKEN = "2135672944:AAFsuwyYT8i9uLGAcvJqv7vlgI6nxry6Gp4" #c2ptech:1922939236:AAEBz-fAFyefnvkgDunvjKyXDv8wTDbiTOI ,c2ptech5:1976201011:AAHAM1AgLsYUf6n4yc8PEFI9xcpka5Urw5E c2ptech5:1960740134:AAHclBxMLl9_lvVJSEbWBFlwVnlMjLE6woQ 
-GDRIVE_FOLDER_ID = "0AIGGqSmOUMZKUk9PVA" #my upload :1KkSOpu5PkgzTlZL3KIeMlLIn272KXoFi group drive:0AJXtxQpHaP-TUk9PVA
+BOT_TOKEN = "2135672944:AAFsuwyYT8i9uLGAcvJqv7vlgI6nxry6Gp4"
+GDRIVE_FOLDER_ID = "0AIGGqSmOUMZKUk9PVA"
 OWNER_ID = 1273430546
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
@@ -16,7 +16,7 @@ AUTHORIZED_CHATS = ""  # Split by space
 SUDO_USERS = ""  # Split by space
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "True"
-INDEX_URL = "https://videohive.c2ptech.workers.dev/0:" #http://mydrive.akeelaasath.workers.dev
+INDEX_URL = "https://c2ptech.akeelaashath1.workers.dev/0:"" #http://mydrive.akeelaasath.workers.dev
 STATUS_LIMIT = ""  # Recommend limit status to 4 tasks max
 UPTOBOX_TOKEN = ""
 MEGA_API_KEY = "04ZRSCaD"
@@ -30,7 +30,7 @@ SHORTENER_API = "" #8d07a0cad4930555e616a2d3f06ce19b7639d2d4
 # qBittorrent
 IS_VPS = ""
 SERVER_PORT = "80"  # Only for VPS
-BASE_URL_OF_BOT = "https://videohive2101516757:AAEkIWkgI8ZsZG1XfxocX25sndUz9AwfJbQ.herokuapp.com"  # Required for Heroku
+BASE_URL_OF_BOT = "https://videohive.herokuapp.com"    # Required for Heroku
 # If you want to use Credentials externally from Index Links, fill these vars with the direct links
 # These are optional, if you don't know, simply leave them, don't fill anything in them.
 ACCOUNTS_ZIP_URL = ""
